# flatbread-wc-data-viewer

./: .gitignore  index.html  readme.md
data/: multiindex_df.json  multiple_ids.json  simple_df.json  uro_2024.json
python/: pyproject.toml  readme.md
python/flatbread-data-viewer/templates/: viewer.jinja.html
python/flatbread_dataviewer/: __init__.py  accessor.py
python/flatbread_dataviewer/templates/: viewer.jinja.html
src/: viewer.js
src/axis/: axis.js  columns.js  index.js
src/components/: action-button.js  control-panel.js  data-record.js  filter-combo.js  filter-input.js  sort-button.js  sortable-column-header.js
src/components/record/: data-record.js  record-builder.js
src/components/table/: click-handler.js  data-table.js  scroll-manager.js  stylesheet.js  table-builder.js
src/data/: data.js  view.js
src/export/: exporter.js
src/managers/: event-coordinator.js  filter-manager.js  navigation-controller.js
src/mixins/: wheel-handler.js
src/navigation/: navigation-controller.js
src/styles/: base.js  interactive.js
