[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatbread-dataviewer"
version = "0.1.0"
description = "Pandas extension for viewing DataFrames with the flatbread data-viewer web component"
readme = "README.md"
license = { file = "license.md" }
authors = [
    {name = "L.C. Vriend", email = "vanboefer@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=1.3.0",
    "jinja2>=3.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://flatbread-dataframes.github.io/flatbread-wc-data-viewer/"

[tool.hatch.build.targets.wheel]
packages = ["flatbread_dataviewer"]

[tool.hatch.build.targets.wheel.sources]
"python" = ""
